# Lab6_E2

./: docker-compose.yml  pyproject.toml
backend/: chat_controller.py  main.py  run.py
backend/app/: main.py  models.py  utils.py
backend/app/core/: config.py
backend/app/graph/: __init__.py  prompts.py  state.py  workflow.py
backend/app/graph/nodes/: __init__.py  elicitation.py  off_topic.py  retrieval.py  router.py  synthesizer.py
backend/app/pipeline/: __init__.py
backend/app/recommender/: __init__.py  engine.py
backend/app/retrieval/: __init__.py  sources.py
backend/app/services/llm/: client.py
backend/app/vectorstore/: ingest.py  store.py
backend/data/: claw_data_YT.py  vinfast_data.csv  vinfast_data.json
backend/scripts/: crawl_vinfast_specs.py  eval_recommendations.py  eval_router.py  ingest_corpus.py
backend/tests/: conftest.py  test_api.py  test_pipeline.py  test_vectorstore.py
canhan/: feedback.md
canhan/2A202600353_BùiHữuHuấn_Day05/: analysis.md  reflection.md
canhan/Mạc Phạm Thiên Long - 2A202600384/: analysis.md  reflection.md
canhan/Nguyễn Doãn Hiếu-2A202600144/: analysis.md
canhan/NguyễnVănĐạt-2A202600411/: analysis.md
canhan/Phan Hoài Linh-2A202600278/: analysis.md.md  reflection.md
font-end/: layout.tsx
font-end/(chat)/: actions.ts  page.tsx
font-end/artifacts/sheet/: server.ts
font-end/artifacts/text/: server.ts
font-end/hooks/: use-auto-resume.ts  use-chat.ts  use-messages.tsx
font-end/login/: page.tsx
font-end/register/: page.tsx
group-c401-e2/: spec-draft-c401-e2.md  spec-final.md
(+9 files in other folders)
